--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bindings": "~1.2.1",
     "mongodb": "^2.2.31",
+    "object-sizeof": "^1.3.0",
     "redis": "^2.8.0",
     "socket.io": "^2.0.3"
   },
